# claude-openai-mcp

./: .env.example  .gitignore  LICENSE  README.md  claude_code_add.sh  install.sh  launch_mcp.py  pyproject.toml  requirements.txt  setup.py
src/: config.py  openai_client.py  prompts.py  server.py
src/tools/: __init__.py  analyze.py  base.py  code.py  debug.py  reasoning.py  refactor.py  review.py  safety_review.py
